--- a/client-side/src/components/landing/lms/lms.css
+++ b/client-side/src/components/landing/lms/lms.css
@@ -2,11 +2,11 @@
   width: 100px;
 }
 
-.card1 {
-  /* box-shadow: 0 0 20px 0; */
+/* .card1 {
+  box-shadow: 0 0 20px 0;
   width: 100%;
-  /* height: 450px; */
-}
+  height: 450px;
+} */
 /* .url{
     margin:10px;
 } */
