--- a/client-side/src/components/landing/lms/lms.css
+++ b/client-side/src/components/landing/lms/lms.css
@@ -21,3 +21,25 @@
 .grid-container {
   grid-row-gap: 50px;
 }
+.box-shadow1
+{
+	/* -webkit-box-shadow: 0 1px 1px rgba(72,78,85,.6); */
+	box-shadow: 0 1px 1px rgba(72,78,85,.6);
+	/* -webkit-transition: all .2s ease-out;
+	-moz-transition: all .2s ease-out;
+	-ms-transition: all .2s ease-out;
+	-o-transition: all .2s ease-out;
+	transition: all .2s ease-out; */
+}
+
+.box-shadow1:hover
+{
+	/* -webkit-box-shadow: 0 20px 40px rgba(72,78,85,.6); */
+	box-shadow: 0 20px 40px rgba(72,78,85,.6);
+	/* -webkit-transform: translateY(-15px);
+	-moz-transform: translateY(-15px);
+	-ms-transform: translateY(-15px);
+	-o-transform: translateY(-15px);
+	transform: translateY(-15px); */
+}
+
