--- a/client-side/src/pages/landing/login-signup/signup/index.css
+++ b/client-side/src/pages/landing/login-signup/signup/index.css
@@ -2,10 +2,10 @@
   width: 30rem !important;
   /* border: 1px solid #d5d5d5 !important; */
 }
-.message {
+/* .message {
   color: red;
   text-align: start;
-}
+} */
 .typography {
   font-size: 15px;
   color: #777777;
@@ -29,4 +29,5 @@
   text-transform: capitalize !important;
   font-weight: 600 !important;
   margin-left: 12rem !important;
+  width: 10rem !important;
 }
