--- a/client-side/src/pages/landing/login-signup/login/index.css
+++ b/client-side/src/pages/landing/login-signup/login/index.css
@@ -35,7 +35,8 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  margin-left: 0rem;
+  margin-left: 8rem;
+  margin-right: 14rem;
 }
 .signup {
   cursor: pointe;
@@ -56,13 +57,14 @@
 }
 
 .typo {
-  font-size: 15px;
+  /* font-size: 15px; */
 
   position: relative !important;
-  top: 1rem !important;
-
+  top: 3px !important;
+  margin-bottom: -9px !important;
   text-align: start;
   color: #777777 !important;
+  margin-bottom: 0rem;
 }
 
 .text {
