--- a/client-side/src/pages/admin/changePassword/index.css
+++ b/client-side/src/pages/admin/changePassword/index.css
@@ -9,7 +9,7 @@
 }
 .reset {
   margin-top: 4rem !important;
-  margin-right: 4rem !important;
+  margin-left: 4rem !important;
 }
 .Button {
   font-weight: 600 !important;
