--- a/client-side/src/pages/owner/changePassword/index.css
+++ b/client-side/src/pages/owner/changePassword/index.css
@@ -29,10 +29,11 @@
   align-items: center !important;
   box-shadow: 4px 6px 34px -6px grey;
   width: 30rem;
-  height: 37rem;
-  position: relative;
+  height: 33rem !important;
+  position: absolute;
   top: -7rem;
-  right: 4rem;
+  right: 7rem;
   color: grey;
   margin-bottom: 1rem;
+  margin-top: 15rem !important;
 }
